--- a/t/index.html
+++ b/t/index.html
@@ -312,7 +312,7 @@
                     <img src="./学生通行码_files/schoolname.png"><br>
                 </div>
                 <div class="top-xm">
-                    <span id="_name" style="font-size:45px;font-weight: 600;"></span>
+                    <span id="_name" style="font-size:45px;font-weight: 600;">诸葛呼吸</span>
                     <script>
                         const para = document.querySelector('span');
                         para.addEventListener('click', updateName);
