--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/layer.js" type="text/javascript"></script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
+    <script src="js/user.js" type="module"></script>
 </head>
 
 <body>
@@ -22,8 +23,8 @@
                     <img src='img/schoolname.png'><br />
                 </div>
                 <div class="top-xm">
-                    陈昊天&nbsp;&nbsp;
-                    <span>学生</span>
+                    <span class="top-xm-1">陈昊天</span>&nbsp;&nbsp;
+                    <span id="top-xm-2">学生</span>
                 </div>
                 <div class="top-xgh">
                     学工号：2021329600006
