--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/layer.js" type="text/javascript"></script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
-    <script src="js/user.js" type="module"></script>
+    <script src="js/user.js" type="text/javascript"></script>
 </head>
 
 <body>
