--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                     <img src='img/schoolname.png'><br />
                 </div>
                 <div class="top-xm">
-                    <span class="top-xm-1">陈昊天</span>&nbsp;&nbsp;
+                    <span class="top-xm-1">诸葛呼吸</span>&nbsp;&nbsp;
                     <span id="top-xm-2">学生</span>
                 </div>
                 <div class="top-xgh">
-                    学工号：2021329600006
+                    学工号：2020329623638
                 </div>
                 <div class="top-dw">
-                    学院/班级：计算机科学与技术学院（人工智能学院）
+                    学院/班级：信息科学与工程学院
                 </div>
                 <div class="top-dw" onclick="GetInfo('Txm')">
                     通行时间：<span class="top-dw-sj">2022-09-02至2023-01-06</span>
