--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                     <img src='img/schoolname.png'><br />
                 </div>
                 <div class="top-xm">
-                    <span class="top-xm-1">诸葛呼吸</span>&nbsp;&nbsp;
+                    <span class="top-xm-1">魏明铭</span>&nbsp;&nbsp;
                     <span id="top-xm-2">学生</span>
                 </div>
                 <div class="top-xgh">
                     学工号：2020329623638
                 </div>
-                <div class="top-dw">
+                <div class="top-dw" id="dept">
                     学院/班级：信息科学与工程学院
                 </div>
                 <div class="top-dw" onclick="GetInfo('Txm')">
